meet the trainers section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
 
         <!-- "what we do" section -->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
+            <h2 class="section-title primary-border">
+                What We Do
+            </h2>
             <p> 
                 butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
             </p>
@@ -80,7 +82,9 @@
 
         <!-- "what you do" section -->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What You Do</h2>
+            <h2 class="section-title secondary-border">
+                What You Do
+            </h2>
 
             <div>
                 <!-- insert img element -->
@@ -109,8 +113,43 @@
         </section>
 
         <!-- "meet the trainers" section -->
-        <section id="your-trainers">
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">
+                Meet The Trainers
+            </h2>
+            <!-- First Trainer -->
+            <article class="trainer">
+                <img src="./assets/images/01-05-trainers/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse amet nobis ipsa recusandae eum? Suscipit rem aut quasi debitis iusto rerum, velit, nesciunt dolor dolorum, molestias sed eaque odit? Eius?
+                    </p>
+                </div>
+            </article>
+            <!-- Second Trainer -->
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis sit natus voluptatem rerum corporis quo minima cupiditate doloribus recusandae fugit maiores repellendus minus, repellat unde reiciendis odio neque quae quis.
+                    </p>
+                </div>
+                <img src="./assets/images/01-05-trainers/trainer-2.jpg" alt="Joanna Gill cooling off after a workout">
+            </article>
+            <!-- Third Trainer -->
+            <article class="trainer">
+                <img src="./assets/images/01-05-trainers/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small weights">
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima qui nostrum reprehenderit accusamus sint. Accusantium ipsum consequatur, autem officiis, beatae ea doloremque eos modi blanditiis minus reiciendis illum perferendis ut.
+                    </p>
+                </div>
+            </article>
         </section>
 
         <!-- "reach out" section -->
