--- a/index.html
+++ b/index.html
@@ -155,6 +155,31 @@
         <!-- "reach out" section -->
         <section id="reach-out">
             <h2>Reach Out</h2>
+            <div class="contact-info">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.024537049741!2d-112.0753954839467!3d33.4486672567403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b12219a134d4b%3A0x7e63f9be20e36c01!2s1%20N%20Central%20Ave%2C%20Phoenix%2C%20AZ%2085004!5e0!3m2!1sen!2sus!4v1643519074283!5m2!1sen!2sus" 
+                width="400" 
+                height="400" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+                </iframe>    
+            </div>
+
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    Any questoins or concers before signing up? 
+                    <br />
+                    Let us know and we'll be hally to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br/>
+                    Some Town, Ca <br/>
+                    12345 <br/>
+                    P: 555.RUN.BUDZ (555.786.2839)<br/>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
         </section>
 
         <!-- footer -->
