--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8"/>
         <title>Privacy Policy - Run Buddy</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/css/secondary-styles.css" />
     </head>
     <body>
         <!-- navigation -->
@@ -35,7 +36,7 @@
 
         <!-- hero -->
         <section class="hero">
-            <h2 class="page-title">
+                    <h2 class="page-title">
                 Privacy Policy
             </h2>
         </section>
