fixed href for h1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <h1>
                 <!-- not sure why this href isn't refreshing the page -->
-                <a href="/">RUN BUDDY</a>
+                <a href="#">RUN BUDDY</a>
             </h1>
             <nav>
                 <!-- Unordered list element -->
@@ -128,6 +128,7 @@
                     </p>
                 </div>
             </article>
+
             <!-- Second Trainer -->
             <article class="trainer">
                 <div class="trainer-bio text-right">
@@ -139,6 +140,7 @@
                 </div>
                 <img src="./assets/images/01-05-trainers/trainer-2.jpg" alt="Joanna Gill cooling off after a workout">
             </article>
+            
             <!-- Third Trainer -->
             <article class="trainer">
                 <img src="./assets/images/01-05-trainers/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small weights">
