add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
         <!-- hero/jumbotron -->
         <section class="hero">
+            <content class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sequi ut magnam sunt amet qui accusantium! Laudantium, dolores velit pariatur rerum reiciendis ea! Quod ipsa vitae atque similique temporibus repudiandae.</p>
+            </content>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult.</p>
