--- a/index.html
+++ b/index.html
@@ -82,23 +82,29 @@
 
     <!-- "what we do" start - <section> -->
     <section id="what-we-do" class="intro">
+      <div class="flex-row">
         <h2 class="section-title primary-border">
             What We Do
         </h2>
+      </div>
+      <div class="flex-row">
         <p>
             butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct
             trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie
             Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings
             narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
         </p>
+      </div>
     </section>
     <!-- end "what we do" -->
 
     <!-- "what you do" start -->
     <section id="what-you-do" class="steps">
+        <div class="flex-row">
         <h2 class="section-title secondary-border">
             What You Do
         </h2>
+        </div>
         <div>
             <img src="./assets/images/01-04-svgs/step-1.svg" alt="" />
             <h3>Step 1: <span>Fill Out The Form Above.</span></h3>
@@ -124,9 +130,11 @@
 
     <!-- "meet the trainers" start -->
     <section id="your-trainers" class="trainers">
+      <div class="flex-row">
         <h2 class="section-title primary-border">
             Meet The Trainers
         </h2>
+      </div>
 
         <article class="trainer">
             <img src="./assets/images/01-05-trainers/trainer-1.jpg"
@@ -167,9 +175,11 @@
 
     <!-- "reach out" start -->
     <section id="reach-out" class="contact">
+      <div class="flex-row">
         <h2 class="section-title secondary-border">
             Reach Out
         </h2>
+      </div>
 
         <div class="contact-info">
             <iframe
